fix edit/remove position buttons visibility

--- a/assets/stylesheets/tercomin.css
+++ b/assets/stylesheets/tercomin.css
@@ -60,6 +60,7 @@ div.circle {border-radius: 50%/50%; width: 10px; height: 10px; background: #1995
 /*.position-ph{background: #f4f4f4;}*/
 .positions-view{list-style-type: none;}
 .profile-header{padding-bottom: 10px;}
+.profile-table-header{padding-bottom: 10px;}
 /*ul.positions-view li:nth-child(odd) {background-color: #E4E4E4;}*/
 
 .position-container{margin: 10px;}
